kube/int/auth-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/rewrite-target: "/tap"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "http://$host/tap/ https://$host/api/tap/"
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-Uid, X-Auth-Request-Token
    nginx.ingress.kubernetes.io/auth-url: https://lsst-lsp-int.ncsa.illinois.edu/auth?capability=read:tap&reissue_token=true
    nginx.ingress.kubernetes.io/configuration-snippet: |
      error_page 403 = @Basic401; # Basic401 configured in jwt-authorizer ingress rule
      auth_request_set $auth_token $upstream_http_x_auth_request_token;
      proxy_set_header Authorization "Bearer $auth_token";
  name: tap-ingress
spec:
  rules:
  - host: lsst-lsp-int.ncsa.illinois.edu
    http:
      paths:
      - backend:
          serviceName: tap-service
          servicePort: 8080
        path: /api/tap
