kube/int/tap-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/rewrite-target: "/tap"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "http://$host/tap/ https://$host/api/tap/"
  name: tap-ingress
spec:
  rules:
  - host: lsst-lsp-int.ncsa.illinois.edu
    http:
      paths:
      - backend:
          serviceName: tap-service
          servicePort: 8080
        path: /api/tap
